2011-07-02  Roland McGrath  <roland@hack.frob.com>

	* elf/Makefile ($(objpfx)ld.so): Use -defsym=_begin=0 instead of
	linker script munging.

2011-07-02  Ulrich Drepper  <drepper@gmail.com>

	* crypt/sha512.h (struct sha512_ctx): Add union to access total also
	as 128-bit value.
	* crypt/sha512.c (sha512_process_block): Perform total addition using
	128-bit if possible.
	(__sha512_finish_ctx): Likewise.
	* crypt/sha256.h (struct sha256_ctx): Add union to access total also
	as 64-bit value.
	* crypt/sha256.c (SWAP64): Define.
	(sha256_process_block): Perform total addition using 64-bit if
	possible.
	(__sha256_finish_ctx): Likewise.

2011-07-01  Ulrich Drepper  <drepper@gmail.com>

	* nscd/pwdcache.c (cache_addpw): Cleanup.  Add branch prediction.
	* nscd/initgrcache.c (addinitgroupsX): Likewise.
	* nscd/hstcache.c (cache_addhst): Likewise.
	* nscd/grpcache.c (cache_addgr): Likewise.
	* nscd/aicache.c (addhstaiX): Likewise
	* nscd/servicescache.c (cache_addserv): Handle zero negtimeout.

2011-07-01  Thorsten Kukuk  <kukuk@suse.de>

	* nscd/pwdcache.c (cache_addpw): Handle zero negtimeout.
	* nscd/initgrcache.c (addinitgroupsX): Likewise.
	* nscd/hstcache.c (cache_addhst): Likewise.
	* nscd/grpcache.c (cache_addgr): Likewise.
	* nscd/aicache.c (addhstaiX): Likewise

2011-07-01  Andreas Schwab  <schwab@redhat.com>

	* nis/nss_compat/compat-pwd.c (getpwent_next_nss_netgr): Query NIS
	domain only when needed.

2011-06-30  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/posix/getaddrinfo.c (gaih_inet): Make sure RES_USE_INET6
	is always restored.

2011-06-29  Ulrich Drepper  <drepper@gmail.com>

	* nscd/grpcache.c (cache_addgr): Don't write notfound reply if we
	are re-adding the entry.
	* nscd/servicescache.c (cache_addserv): Likewise.

2011-06-30  Aurelien Jarno  <aurelien@aurel32.net>

	* sysdeps/generic/dl-irel.h: fix protection against multiple
	inclusions.
	* sysdeps/generic/dl-irel.h (elf_ifunc_invoke): New.

2011-06-28  Ulrich Drepper  <drepper@gmail.com>
